# 422-robot-2013

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old  CommandBase.cpp  CommandBase.h  CommandBasedRobot.cpp  CompilationSettings.h  Doxyfile  FRCRobot.sln  FRCRobot.vcxproj  FRCRobot.vcxproj.filters  InterfaceMap.h  OI.cpp  OI.h  README.md  RobotMap.h  Robotmap.h  Team422Robot.cpp  Team422Robot.h  coding-conventions.md
Commands/: AutonomousCommand.cpp  AutonomousCommand.h  BangBangShooterControl.cpp  BangBangShooterControl.h  BangBangShooterControll.cpp  BangBangShooterControll.h  CheesyDrive.cpp  CheesyDrive.h  ControlLights.cpp  ControlLights.h  DriveRotations.cpp  DriveRotations.h  MoveShooterArticulator.cpp  MoveShooterArticulator.h  Nuke.cpp  Nuke.h  OperateShooter.cpp  OperateShooter.h  OperateShooterArticulator.cpp  OperateShooterArticulator.h  OperateSolenoid.cpp  OperateSolenoid.h  RaiseClimber.cpp  RaiseClimber.h  SetShooter.cpp  SetShooter.h  SetShooterArticulator.cpp  SetShooterArticulator.h  Shoot.cpp  Shoot.h  ShowAligned.cpp  ShowAligned.h  SpinHalfRotation.cpp  SpinHalfRotation.h  StartHopperWheel.cpp  StartHopperWheel.h  StartShooterPusher.cpp  StartShooterPusher.h  ToggleArticulator.cpp  ToggleArticulator.h  (+6 more)
Subsystems/: Antennae.cpp  Antennae.h  Arm.cpp  Arm.h  Climb.cpp  Climb.h  Climber.cpp  Climber.h  CompressorSystem.cpp  CompressorSystem.h  Drive.cpp  Drive.h  Flashlight.cpp  Flashlight.h  Lights.cpp  Lights.h  NuclearOption.cpp  NuclearOption.h  PIDTalonWrapper.cpp  PIDTalonWrapper.h  PistonArticulator.cpp  PistonArticulator.h  Pneumatics.cpp  (+9 more)
(+81 files in other folders)
